# pg_statviz

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  META.json  Makefile  README.md  pg_statviz--0.1--0.2.sql  pg_statviz--0.1--0.3.sql  pg_statviz--0.1.sql  pg_statviz--0.2.sql  pg_statviz--0.3--0.4.sql  pg_statviz--0.3.sql  pg_statviz--0.4--0.5.sql  pg_statviz--0.5--0.6.sql  pg_statviz--0.6--0.7.sql  pg_statviz--0.7--0.8.sql  pg_statviz--0.7.sql  pg_statviz--0.8--0.9.sql  pg_statviz--0.8.sql  pg_statviz--0.9.sql  pg_statviz.control  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
expected/: pg_statviz_test.out
sql/: pg_statviz_test.sql
src/: run_pg_statviz
src/pg_statviz/: flake.sh  pg_statviz.py
src/pg_statviz/libs/: dbconn.py  info.py  plot.py
src/pg_statviz/modules/: analyze.py  buf.py  buf_rate.py  cache.py  checkp.py  checkp_rate.py  checksum.py  conf.py  conn.py  io.py  lock.py  repl.py  slru.py  tuple.py  wait.py  wal.py  wal_rate.py  xact.py
src/pg_statviz/tests/: test_buf.py  test_cache.py  test_checkp.py  test_io.py  test_wal.py  util.py
