[project]
name = "pg_statviz"
version = "0.2"
description = "A minimalist extension and utility pair for time series analysis and visualization of PostgreSQL internal statistics."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["open-source", "postgres", "opensource", "database", "dataviz", "time-series", "postgresql", "data-visualization", "database-management", "database-administration", "performance-analysis", "postgresql-database", "postgresql-extension", "time-series-analysis"]
authors = [{name = "Jimmy Angelakos", email = "jimmy.angelakos@enterprisedb.com"}]
classifiers = ["Development Status :: 3 - Alpha",
               "License :: OSI Approved :: PostgreSQL License",
               "Programming Language :: Python :: 3",]
dependencies = ["argh", "contourpy", "cycler", "fonttools", "kiwisolver", "matplotlib", "numpy", "packaging", "Pillow", "psycopg2", "pyparsing", "python-dateutil", "six"]

[project.urls]
"Homepage" = "https://github.com/vyruss/pg_statviz"

[project.scripts]
pg_statviz = "pg_statviz.pg_statviz:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pg_statviz.libs" = ["*ttf", "*png"]
